Update ethernet monitoring

--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -81,7 +81,7 @@ ${font Open Sans Light:pixelsize=80}${time %H:%M}${font}
 ${font Open Sans Light:pixelsize=40}${time %d.%m.%Y}${font}
 $hr
 $sysname $kernel on $machine 
-${color grey}updates available: $color${execpi 3600 checkupdates | wc -l}
+${color grey}updates available: $color${execi 3600 checkupdates | wc -l}
 $hr
 ${color grey}Battery level: $color$battery_percent% $battery_bar 15 100
 ${color grey}Uptime:$color $uptime
@@ -94,12 +94,12 @@ ${color grey}CPU Usage:$color $cpu% ${cpubar 4}
 $hr
 ${color grey}File systems:
  / $color${fs_used /}/${fs_size /} ${fs_bar 6 /}
- /boot $color${fs_used /boot}/${fs_size /boot} ${fs_bar 6 /boot}
+ /boot $color${fs_used /boot/efi}/${fs_size /boot/efi} ${fs_bar 6 /boot/efi}
  /home $color${fs_used /home}/${fs_size /home} ${fs_bar 6 /home}
 $hr
 ${color grey}Gateway IP : $color$gw_ip
  ${if_up wlp3s0}${color grey}Wifi: Down $color${downspeed wlp3s0} ${color grey}   Up $color ${upspeed wlp3s0}
- ${else}${if_up lo}${color grey}Eth:  Down $color${downspeed lo} ${color grey}   Up $color ${upspeed lo}${endif}
+ ${else}${if_up enp0s20u3}${color grey}Eth:  Down $color${downspeed enp0s20u3} ${color grey}   Up $color ${upspeed enp0s20u3}${endif}
  ${color grey}Sum:  Down $color${totaldown wlp3s0} ${color grey}Up ${color}${totalup wlp3s0} 
 $hr
 ${color grey}Name              PID   CPU%   MEM%
